--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       UPDATE_INTERVAL: '0.5'
       MQTT_BROKER_ADDRESS: ${MQTT_BROKER_ADDRESS:-localhost}
       MQTT_BROKER_PORT: ${MQTT_BROKER_PORT:-1883}
-      MQTT_TOPIC_PREFIX: 'dts353f/{attribute}'
+      MQTT_TOPIC_FORMAT: 'dts353f/{attribute}'
       MQTT_QOS: '0'
       MQTT_RETAIN: 'true'
       VALUE_COMPENSATORS: ${VALUE_COMPENSATORS}
